# io-prc-atow

./: .act_secrets_template  .dockerignore  .gitattributes  .gitignore  .pylintrc  .settings.io_aero_template.toml  ATOW Training Features.md  ATWO Training Fearures.md  Dockerfile  LICENSE.md  Makefile  README.md  environment.yml  environment_dev.yml  logging_cfg.yaml  pyproject.toml  requirements.txt  run_io_prc_atow.bat  run_io_prc_atow.sh  run_io_prc_atow.zsh  run_io_prc_atow_dev.bat  run_io_prc_atow_dev.sh  run_io_prc_atow_dev.zsh  run_io_prc_atow_prod.bat  run_io_prc_atow_prod.sh  run_io_prc_atow_prod.zsh  run_io_prc_atow_pytest.bat  run_io_prc_atow_pytest.sh  run_io_prc_atow_pytest.zsh  run_io_template_app.bat  run_io_template_app.sh  run_io_template_app.zsh  run_io_template_app_dev.bat  run_io_template_app_dev.sh  run_io_template_app_dev.zsh  run_io_template_app_prod.bat  run_io_template_app_prod.sh  run_io_template_app_prod.zsh  run_io_template_app_pytest.bat  run_io_template_app_pytest.sh  (+10 more)
data/: README.md  additional_features.csv  challenge_set.csv  combined_training_data.csv  density_altitude.csv  feature_importance.csv  final_submission_set.csv  ias_norm_virt_rate.csv  submission_set.csv  vertical_rate.csv
docs/: Makefile
examples/: README.md
ioprcatow/: README.md  glob_local.py  glob_local.pyi  prcatow.py  prcatow.pyi
iotemplateapp/: README.md  __init__.py  glob_local.py  glob_local.pyi  templateapp.py  templateapp.pyi
libs/: README.md
notebooks/: README.md  chellange_data.ipynb  data_visualisation.ipynb  evaluation_data.ipynb  ias_norm_virt_feature.ipynb  ias_norm_virt_rate_feature_design.ipynb  inference.ipynb  training.ipynb  training_data_visualisation.ipynb  trajectory_feature_extraction_general_aggregrations_vertical_rate_density_altitude.ipynb  trajectory_feature_extraction_ias_norm_virt_rate.ipynb
resources/: README.md
results/: 20240916_submission_catboost.csv  20240916_submission_rf.csv  submission_xgb.csv
scripts/: README.md  __init__.py  entrypoint.sh  launcher.py  next_version.py  run_install_dbeaver.sh  run_install_dbeaver.zsh  run_install_docker.sh  run_install_docker.zsh  run_install_miniconda.bat  run_install_miniconda.sh  run_install_miniconda.zsh  run_install_python.bat  run_install_python.sh  run_install_python.zsh  run_install_terraform.sh  run_install_terraform.zsh  run_prep_bash_scripts.sh  run_prep_zsh_scripts.zsh
submissions/: README.md  (+8 more)
tests/: __init__.py  conftest.py  (+2 more)
(+17 files in other folders)
