[project]
authors = [
    { name = "Team IO-Aero", email = "info@io-aero.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "dynaconf",
    "iocommon",
    "iotemplatelib",
    "PyYAML",
    "tomli",
    "tomli-w",
]
description = "Template for an Application Repository"
keywords = [
    "application",
]
maintainers = [
    { name = "Team IO-Aero", email = "info@io-aero.ch" },
]
name = "iotemplateapp"
readme = "README.md"
requires-python = ">=3.10"
version = "1.4.7"

[project.urls]
"Bug Tracker" = "https://github.com/io-aero/io-template-app/issues"
Documentation = "https://io-aero.github.io/io-template-app/"
Homepage = "https://github.com/io-aero/io-template-app"
"Release History" = "https://io-aero.github.io/io-template-app/release_history/"
"Release Notes" = "https://io-aero.github.io/io-template-app/release_notes/"
Source = "https://github.com/io-aero/io-template-app/tree/main/iotemplateapp"

[tool.bandit]
skips = [
    "B101",
    "B404",
    "B603",
]

[tool.black]
include = "\\.pyi?$"
line-length = 100
target-version = [
    "py310",
    "py311",
    "py312",
]

[tool.docformatter]
black = true
blank = true
recursive = true
wrap-descriptions = 100
wrap-summaries = 100

[tool.pytest.ini_options]
console_output_style = "count"
markers = [
    "issue",
]
norecursedirs = "./tests/helpers"
pythonpath = "./iotemplateapp/"
testpaths = "./tests/"

[tool.ruff]
exclude = [
    ".git",
    ".history",
    ".idea",
    ".mypy_cache",
    ".pytest_cache",
    ".vscode",
    "build",
    "iotemplateapp.egg-info",
    "temp",
]
line-length = 100
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "D211",
    "D213",
    "PGH003",
    "PLW0603",
    "S101",
    "S603",
]
fixable = [
    "ALL",
]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.vulture]
make_whitelist = true
min_confidence = 100
